--- a/examples/buttons.html
+++ b/examples/buttons.html
@@ -178,6 +178,7 @@
       <button class="button button--large button--outline">Continue</button>
       <button class="button button--large button--danger">Continue</button>
       <button class="button button--large button--plain">Continue</button>
+      <button class="button button--large button--toggle">Continue</button>
     </div>
     <div class="oui-button-row--left push-double--bottom">
       <button class="button">Continue</button>
@@ -185,6 +186,7 @@
       <button class="button button--outline">Continue</button>
       <button class="button button--danger">Continue</button>
       <button class="button button--plain">Continue</button>
+      <button class="button button--toggle">Continue</button>
     </div>
     <div class="oui-button-row--left push-double--bottom">
       <button class="button button--small">Continue</button>
@@ -192,6 +194,7 @@
       <button class="button button--small button--outline">Continue</button>
       <button class="button button--small button--danger">Continue</button>
       <button class="button button--small button--plain">Continue</button>
+      <button class="button button--small button--toggle">Continue</button>
     </div>
 
     <h3 class="push--bottom">Buttons Default</h3>
@@ -202,6 +205,7 @@
       <button class="button button--outline">Continue</button>
       <button class="button button--danger">Continue</button>
       <button class="button button--plain">Continue</button>
+      <button class="button button--toggle">Continue</button>
     </div>
 
     <h3 class="push--bottom">Buttons with Icons</h3>
@@ -212,6 +216,7 @@
       <button class="button button--outline"><svg class="icon"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#add"></use></svg> Add</button>
       <button class="button button--danger"><svg class="icon"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#add"></use></svg> Add</button>
       <button class="button button--plain"><svg class="icon"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#add"></use></svg> Add</button>
+      <button class="button button--toggle"><svg class="icon"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#add"></use></svg> Add</button>
     </div>
 
     <div style="background:#222;padding:10px; display:inline-block;margin-bottom:40px">
@@ -225,6 +230,7 @@
       <a href="#" class="button button--outline">Continue</a>
       <a href="#" class="button button--danger">Continue</a>
       <a href="#" class="button button--plain">Continue</a>
+      <a href="#" class="button button--toggle">Continue</a>
     </div>
 
     <div style="background:#222;padding:10px; display:inline-block;margin-bottom:40px">
@@ -255,6 +261,7 @@
       <button disabled class="button button--outline">Continue</button>
       <button disabled class="button button--danger">Continue</button>
       <button disabled class="button button--plain">Continue</button>
+      <button disabled class="button button--toggle">Continue</button>
     </div>
 
     <div style="background:#222;padding:10px; display:inline-block;margin-bottom:40px">
